# hf-providers

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  claude.sh
.github/workflows/: ci.yml  deploy-web.yml  release.yml  snapshot.yml  weekly-report.yml
Formula/: hf-providers.rb
assets/: logo.tsx
crates/hf-providers-cli/: Cargo.toml
crates/hf-providers-cli/src/: main.rs
crates/hf-providers-core/: Cargo.toml
crates/hf-providers-core/src/: api.rs  cache.rs  cloud.rs  error.rs  estimate.rs  hardware.rs  lib.rs  model.rs  pricing.rs  provider.rs  reference.rs  snippet.rs  sync.rs
crates/hf-providers-core/tests/: model_selection.rs  parse_model.rs  snippet.rs
crates/hf-providers-web/: Cargo.toml
crates/hf-providers-web/src/: lib.rs
data/: cloud.toml  hardware.toml
scripts/: APPLE_SILICON.md  build-seo-pages.py  build-web.sh  fetch-models.py  gen_hardware.py  smoke-web.py  snapshot.py  toml2json.py  weekly-report.py
web/: app.js  index.html  style.css
web/data/: cloud.json  hardware.json  models.json  moe-params-cache.json
web/lib/: compare-utils.js  gpu-detect.js  hf-api.js  parse.js  router.js  search.js  sort.js  tips.js  wasm.js
web/views/: browse-cloud.js  browse-hw.js  browse-models.js  browse-providers.js  check-model-hw.js  compare-hw.js  compare-providers.js  hardware.js  model.js  provider.js  stats.js  trending.js
work/: design-v1.md  source-code-design.txt  ui-spec.md
