[workspace]
resolver = "2"
members = [
    "crates/hf-providers-core",
    "crates/hf-providers-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Real-time inference provider comparison for Hugging Face models"
repository = "https://github.com/jadnohra/hf-providers"
homepage = "https://github.com/jadnohra/hf-providers"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
