[workspace]
resolver = "2"
members = [
    "crates/hf-providers-core",
    "crates/hf-providers-cli",
    "crates/hf-providers-web",
]
default-members = [
    "crates/hf-providers-core",
    "crates/hf-providers-cli",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Find inference providers for Hugging Face models, compare them, get code snippets"
repository = "https://github.com/jadnohra/hf-providers"
homepage = "https://github.com/jadnohra/hf-providers"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
toml = "0.8"
