[package]
name = "hf-providers-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "hfp"
path = "src/main.rs"

[dependencies]
hf-providers-core = { path = "../hf-providers-core" }
tokio.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
console = "0.15"
anyhow = "1"
chrono = "0.4"
