[package]
name = "hf-providers-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding = "2"
dirs = "5"
toml = { workspace = true }
