[package]
name = "hf-providers-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[features]
default = ["network"]
network = ["reqwest", "tokio", "dirs", "urlencoding"]

[dependencies]
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs = { version = "5", optional = true }
urlencoding = { version = "2", optional = true }
toml = { workspace = true }
